tests/ui/parser/attribute/attr-unquoted-ident.stderr
error: expected a literal (`1u8`, `1.0f32`, `"string"`, etc.) here, found expression
  --> $DIR/attr-unquoted-ident.rs:6:15
   |
LL |     #[cfg(key=foo)]
   |               ^^^ expressions are not allowed here
   |
help: surround the identifier with quotation marks to make it into a string literal
   |
LL |     #[cfg(key="foo")]
   |               +   +

error: expected a literal (`1u8`, `1.0f32`, `"string"`, etc.) here, found expression
  --> $DIR/attr-unquoted-ident.rs:13:15
   |
LL |     #[cfg(key=foo bar baz)]
   |               ^^^ expressions are not allowed here
   |
help: surround the identifier with quotation marks to make it into a string literal
   |
LL |     #[cfg(key="foo bar baz")]
   |               +           +

   |
LL |     ($name:ident) => { #[doc(alias = $name)] pub struct S; }
   |                                      ^^^^^
...
LL | make!(nickname);
   | --------------- in this macro invocation
   |
   = note: this error originates in the macro `make` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 4 previous errors

